--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,7 @@ selenium
 streamlit
 pandas
 pandas_ta
-plotly.io
-plotly.graph_objects
-plotly.subplots
+plotly
 ta
 re
 numpy
@@ -14,8 +12,7 @@ time
 yfinance
 streamlit.components.v1
 bs4
-urllib.request
+urllib
 prophet
-prophet.plot
 plotly
 matplotlib
